--- a/frontend/goeve/android/app/build.gradle
+++ b/frontend/goeve/android/app/build.gradle
@@ -137,7 +137,8 @@ dependencies {
     implementation project(':react-native-splash-screen')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.facebook.react:react-native:+"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'// From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
