--- a/frontend/goeve/package.json
+++ b/frontend/goeve/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.18.0",
     "react": "16.6.3",
     "react-native": "^0.58.5",
+    "react-native-gesture-handler": "^1.0.17",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.2"
   },
   "devDependencies": {
